--- a/client/package.json
+++ b/client/package.json
@@ -24,10 +24,13 @@
     "ckeditor5": "^44.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "entities": "^6.0.0",
     "firebase": "^11.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
@@ -36,6 +39,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
     "react-toastify": "^11.0.2",
+    "recharts": "^2.15.2",
     "redux-persist": "^6.0.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.5",
